@@ -1,0 +1,190 @@
+<h1>WebUI</h1>
+The web interface of the client node (otherwise known as WebUI) is a convenient way to interact
+with the node from a web browser launched at a local, as well as a remote host.
+It is tested with Google Chrome, but should be compatible with any modern HTML5 browser.<br>
+<br>
+By default it is accessible at TCP port <b>8833</b> and the access is restricted to local connection
+only, so you can access it only from the node's PC loading
+<a href="http://localhost:8833/">localhost:8833</a><br>
+<br>
+Note that the web interface never refreshes any data without your explicit request.<br>
+<br>
+The web interface has a main menu at the top. No matter which page you are at, the top level
+menu is always visible.<br>
+
+<hr>
+<a name="/" href="/"><h2>Home</h2></a>
+
+Pressing this link takes you to the home page of the web interface.
+
+<h3>Wallet</h3>
+In this section you see the balance of your currently selected wallet.<br>
+You can download the balance.zip file that is needed by gocoin's wallet app in order to spend any of the bitcoins from this wallet.<br>
+You can also peek at all the unspent outputs belonging to your currently selected wallet.<br>
+
+<h3>Last Block</h3>
+Information about the top most block of the block chain known to your node.
+
+<h3>Network</h3>
+Network related information and statistics, concerning the node.
+
+<h3>Others</h3>
+Some other data related to your running node.<br>
+In this section you can also order the node (its garbage collector engine) to free as much memory as possible.
+
+<h3>Editing configuration file</h3>
+Press the button <span class="but">Show configuration JSON data</span> - the text area will appear with JSON encoded content of the gocoin client config file.<br>
+Change the values you need an press either <span class="but">Apply</span> or <span class="but">Apply & Save</span>.
+If you do not save the changes will not be permanent (will get undone when you shutdown the node).<br>
+To cancel editing, just reload the page, without pressing any of the two buttons.<br>
+
+<h3>Shutting down the node</h3>
+Press the <span class="but">Shutdown Node</span> button and confirm to shut down the node.<br>
+Note that after the node is off, you will not be able to launch it from the web interface (it will shut down as well).
+
+<hr>
+<a name=/wal" href=/wal"><h2>Wallet</h2></a>
+
+At this page you can check a balance of each address of you currently selected wallet, as well as quickly switch between all your available wallets.
+
+<h3>Special wallets</h3>
+There are three wallets with a fixed name that have a special meaning:
+<ul>
+<li><b>ADDRESS</b> - this is your address book (the addresses you will be able to select at <a href="snd">MakeTx</a> page)</li>
+<li><b>DEFAULT</b> - this is the wallet that is always loaded when the node starts</li>
+<li><b>UNUSED</b> - this is wallet where you can move the addresses that you are no longer planing to use (to remove them from your wallets, though still being able to monitor a balance on them, just in case)</li>
+</ul>
+
+<h3>Address book</h3>
+The address book is a special kind of wallet. You can select it only at this page - when you leave the page, it will switch back to the default wallet.<br>
+On the Wallet page you can edit the address book just like any other wallet.
+
+<h3>Editing wallet</h3>
+Select a wallet that you wish to edit, end press <span class="but">Edit</span>.<br>
+After you are done press <span class="but">Save wallet & Recalc balance</span> button.<br>
+
+<h3>Adding wallets</h3>
+To add a new wallet press the <span class="but">Edit</span> button, enter the new wallet's name in
+<span class="but">File Name</span> filed, place the desired content of the wallet in the text area
+and press the <span class="but">Save wallet & Recalc balance</span> button.
+
+<h3>Deleting wallets</h3>
+You cannot delete wallet files from the web interface.
+In order to delete a wallet you need to remove the wallet file from the 
+<span class="cod">wallet/</span> folder (that is a sub-folder in your gocoin's data dir),
+
+<h3>Hidden wallets</h3>
+You can have a wallet that won't be visible on the list. Just give it a file name that starts with a dot (.)
+
+<h3>Including wallets</h3>
+You can include a content (addressees) of one wallet in another. In order to do this, inside the parent wallet put a line like this:<br>
+&nbsp;<span class="cod">@filename</span><br>
+<i>(make sure that the @ character is the first one in the line)</i><br>
+The wallets you include can be of a hidden type. In fact, including hidden wallets inside parent wallets is their only meaning of their existence.
+
+<hr>
+<a name="/snd" href="/snd"><h2>MakeTx</h2></a>
+
+Create a transaction to be further signed by gocoin's wallet.<br>
+It will also crate a raw transaction, which you can sign by any other wallet (e.g. bitcoin-qt).
+
+<h3>Payment details</h3>
+Fill in the outputs of the transaction, the fee and the change address.<br>
+If you need more outputs, press the <a>+ add output</a> link.<br>
+Note that <i>mBTC</i> values and the value of <b>Change</b> are read-only.<br>
+
+<h3>Estimated tx size</h3>
+Note that the estimated transaction size may not be accurate.<br>
+It always assumes compressed public keys and 2 of 3 required signatures in case of unknown P2SH input scripts (without corresponding JSON files in wallet/multisig/).
+
+<h3>Select Inputs</h3>
+Select the unspent outputs that you want to have in the transaction.<br>
+Obviously they must carry enough bitcoins to satisfy your output volume along with the fee - only then <span class="but">Download payment.zip</span> button will be enabled.<br>
+
+<h3>Download payment.zip</h3>
+If the button is not enabled, something in the forms is filled in incorrectly.<br>
+Otherwise press it to download <b>payment.zip</b>, which you will need to extract at your wallet machine.
+Then execute the payment command (by default it will be in file <span class="cod">pay_cmd.txt</span>) and the wallet shall create and sign the transaction, just as you have defined it here.<br>
+
+<hr>
+<a name="/net" href="/net"><h2>Network</h2></a>
+
+The current network connections to other bitcoin peers.
+
+<h3>Incoming connections</h3>
+Click in the link [Switch ON/OFF] (right from the label "Listening for incoming TCP connections") to switch between allowing or blocking remote connections coming to your node from internet.<br>
+Note: You will need to save the config file (at the Home page) to make the change permanent.<br>
+<br>
+Note that switching this network on does not automatically mean that peers will be able to connect to your node. In most cases you will also need to configure your network gateway to allow incoming connections at the desired TCP port and route them to the host running the node. Also note that none of the recent versions of the satoshi's client will connect on any TCP port other then the default one (that is 8333, or 18333 for testnet).
+
+<h3>Peer statistics</h3>
+Click on any row in the network connections table to see detailed info about each peer.<br>
+The info appears as a text box, below the table.
+
+<h3>Drop a connection</h3>
+Click on the red X icon at the right column of a row describing  a peer connection to disconnect from it.
+
+
+<hr>
+<a name="/txs" href="/txs"><h2>Transactions</h2></a>
+
+Transactions memory pool, broadcasting and routing control.
+
+<h3>Memory pool</h3>
+If the memory pool is disabled the node only operates on the full blocks and never downloads any transactions.<br>
+<br>
+To enable/disable memory pool click the [Switch ON/OFF] link next to the "Memory pool" label.<br>
+Note: You will need to save the config file (at the Home page) to make the change permanent.
+
+<h3>Relay transactions</h3>
+Having the memory pool enabled, you can setup your node to either relay incoming transactions, or not.<br>
+<br>
+Press the link right from the label to switch this option on/off.<br>
+Note: You will need to save the config file (at the Home page) to make the change permanent.
+
+<h3>Accepted transactions</h3>
+The value on the button show how many transactions are there in the memory pool. Click on it to see the list. Your own transaction (loaded locally) will appear on the top of the list. The Sent column in the table says to how many times the transaction's data was sent to a peer and (after slash) how many times the inv was sent out. If the transaction was blocked from being relayed (assuming that the relaying was enabled), the Extras column will show the reason.
+
+<h3>Own transactions</h3>
+Locally loaded transactions appear on a light-red background and they have three special icons at the right side of the row.<br>
+The first icon orders the node to broadcast a transaction to one random peer (useful for privacy purposes)<br>
+The second icon broadcast the transaction it to all the currently connected peers.<br>
+The third icon removes (unloads) the transaction from the memory pool.<br>
+<br>
+In most cases own transactions should get removed from the memory pool automatically when they get mined into a block.<br>
+It might not be a case thought, if a transaction was a subject to a so-called transaction malleability disturbance, in which case it will get mined, but the node will not remove it from the list. It is not a security problem, but had such a thing happened, just remove the transaction from the pool manually, because the node never expires own transactions.
+
+<h3>Rejected transactions</h3>
+The value of the button next to the label shows you how many transactions were not accepted into the memory pool. You will see their list when clicking the button, along with the reason of the rejection.
+
+
+<hr>
+<a name="/blocks" href="/blocks"><h2>Blocks</h2></a>
+
+This page shows an information about the recent blocks added to the block chain.
+
+
+<hr>
+<a name="/miners" href="/miners"><h2>Miners</h2></a>
+
+This page shows an information about the block chain mining statistic.<br>
+Clicking on the link in the Monitor column will cause a beep, each time the selected pool would mine a new block.<br>
+<br>
+Note: You will need to save the config file (at the Home page) to make the change permanent.
+
+<hr>
+<h2>Switch wallet</h2>
+
+Allows to quickly switch a wallet, while being on any page of the WebUI.
+
+<hr>
+<h2>Load TX</h2>
+
+Allows to quickly import own transaction to the memory pool.<br>
+The transaction must be in a raw (hex-encoded) format with no spaces, nor any other characters except hex digits.<br>
+If the operation succeeds you will end up in Transactions page that will display the decoded transaction data.<br>
+In order to send you transaction out, make sure to broadcast it after loading.
+
+<a name="/counters" href="/counters"><h2>Stats</h2></a>
+
+Lots of node's internal real time counters and statistics.
